--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@ A tech enthusiast and entrepreneur with a deep love for books. Abdul Hanan Bhatt
             <div class="background"></div>
             <div class="logo">Socials</div>
 
-            <a href="#"
+            <a href="https://www.instagram.com/aict.bookstore"
               ><div class="box box1">
                 <span class="icon"
                   ><svg
@@ -916,7 +916,7 @@ A tech enthusiast and entrepreneur with a deep love for books. Abdul Hanan Bhatt
                     ></path></svg></span></div
             ></a>
 
-            <a href="##"
+            <a href="https://x.com/hananibrah21673"
               ><div class="box box2">
                 <span class="icon"
                   ><svg
@@ -930,7 +930,7 @@ A tech enthusiast and entrepreneur with a deep love for books. Abdul Hanan Bhatt
                 </span></div
             ></a>
 
-            <a href="###"
+            <a href="https://discord.gg/QbXWsTCT"
               ><div class="box box3">
                 <span class="icon"
                   ><svg
