--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         cursor: pointer;
       }
 
-      .input {
+      .search {
         max-width: 190px;
         padding: 8px;
         min-height: 40px;
@@ -61,10 +61,10 @@
         box-shadow: 0px 10px 20px -18px rgba(255, 255, 255, 0.798);
       }
 
-      .input:focus {
+      .search:focus {
         border-bottom: 2px solid #008080;
       }
-      .input:hover {
+      .search:hover {
         outline: 2px solid white;
         transition: 0.5s ease;
         cursor: text;
@@ -499,7 +499,7 @@
           <a href="registration.html">Sign up</a>
           <a href="login.html">Login</a>
         </nav>
-        <input class="input" placeholder="Search..." type="search" />
+        <input class="search" placeholder="Search..." type="search" />
       </div>
     </div>
     <div class="bookSection">
