--- a/login.html
+++ b/login.html
@@ -227,7 +227,7 @@
       <h1 class="heading2">Login</h1>
       <div
         class="login-form"
-        style="margin: auto; padding-bottom: 20px; padding-top: 20px"
+        style="margin: auto; padding-bottom: 20px;"
       >
         <input type="text" required />
         <label for="username">Username / Email</label>
