--- a/registration.html
+++ b/registration.html
@@ -236,12 +236,12 @@
         <label for="username">Last Name</label>
       </div>
       <div class="login-form" style="margin: auto; padding-bottom: 20px;">
-        <input type="email" required />
-        <label for="username">Email</label>
-      </div>
-      <div class="login-form" style="margin: auto; padding-bottom: 20px;">
         <input type="text" required />
         <label for="username">Username</label>
+      </div>
+      <div class="login-form" style="margin: auto; padding-bottom: 20px;">
+        <input type="email" required />
+        <label for="username">Email</label>
       </div>
       <div class="login-form" style="margin: auto; padding-bottom: 20px;">
         <input type="number" required />
@@ -250,6 +250,10 @@
       <div class="login-form" style="margin: auto; padding-bottom: 20px;">
         <input type="password" required />
         <label for="password">Password</label>
+      </div>
+      <div class="login-form" style="margin: auto; padding-bottom: 20px;">
+        <input type="password" required />
+        <label for="password">Confirm Password</label>
       </div>
       <div style="padding-top: 20px;">
         <button style="margin: auto;">
