--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         border-radius: 15px;
         color: rgb(0, 0, 0);
         cursor: pointer;
-        background-color: #ffffff;
+        background-color: #ccc;
         font-weight: 500;
         overflow: hidden;
         display: flex;
@@ -256,7 +256,7 @@
         transform: scale(1.3);
       }
       .Subscribe-btn:hover {
-        color: white;
+        color: #ccc;
       }
       .Subscribe-btn:hover .arrow {
         margin-right: 0;
@@ -264,6 +264,8 @@
         transform-origin: right;
       }
 
+       /* @keyframes bounce-vertical: Creates a bounce effect by scaling the element in different directions. 
+           It uses keyframes to produce a wobbly, elastic motion. */
       @keyframes jello-vertical {
         0% {
           transform: scale3d(1, 1, 1);
@@ -480,7 +482,6 @@
         width: 430px;
         height: 325px;
         gap: 20px;
-
       }
       .socials:hover {
         outline: #62c2fe solid 2px;
@@ -489,6 +490,8 @@
     </style>
   </head>
   <body>
+    <!-- This is the div tag and it has a class name container it conatins the link to all other pages of this website
+     and also contain an inout tag for searching item. -->
     <div class="container">
       <h1 class="heading">Welcome to Book Store!</h1>
       <div class="nav-wrapper">
@@ -502,6 +505,8 @@
         <input class="search" placeholder="Search..." type="search" />
       </div>
     </div>
+    <!-- This div conatin the book section it s a simple div that onatin div inside ti for each book and add to cart option and for ratings
+     For know all the ratings has same id so that is not competly functional this requires javascript or adjust id for each div that make the code more complex  -->
     <div class="bookSection">
       <center><h2 id="bookSectionHeading">🔥Best Sellings</h2></center>
     </div>
@@ -518,16 +523,17 @@
             <img src="shopping-cart-02-svgrepo-com.svg" alt="cart" />
             <i class="fas fa-shopping-cart"></i>
           </button>
+          <!-- this is a div for rating this is the same div that is reused in all books and bookscataloge section  -->
           <div class="rating">
-            <input value="5" name="rating" id="star5" type="radio" />
+            <input value="5" id="star5" type="radio" />
             <label for="star5"></label>
-            <input value="4" name="rating" id="star4" type="radio" />
+            <input value="4" id="star4" type="radio" />
             <label for="star4"></label>
-            <input value="3" name="rating" id="star3" type="radio" />
+            <input value="3" id="star3" type="radio" />
             <label for="star3"></label>
-            <input value="2" name="rating" id="star2" type="radio" />
+            <input value="2" id="star2" type="radio" />
             <label for="star2"></label>
-            <input value="1" name="rating" id="star1" type="radio" />
+            <input value="1" id="star1" type="radio" />
             <label for="star1"></label>
           </div>
         </div>
@@ -545,15 +551,15 @@
             <i class="fas fa-shopping-cart"></i>
           </button>
           <div class="rating">
-            <input value="5" name="rating" id="star5" type="radio" />
+            <input value="5" id="star5" type="radio" />
             <label for="star5"></label>
-            <input value="4" name="rating" id="star4" type="radio" />
+            <input value="4" id="star4" type="radio" />
             <label for="star4"></label>
-            <input value="3" name="rating" id="star3" type="radio" />
+            <input value="3" id="star3" type="radio" />
             <label for="star3"></label>
-            <input value="2" name="rating" id="star2" type="radio" />
+            <input value="2" id="star2" type="radio" />
             <label for="star2"></label>
-            <input value="1" name="rating" id="star1" type="radio" />
+            <input value="1" id="star1" type="radio" />
             <label for="star1"></label>
           </div>
         </div>
@@ -571,15 +577,15 @@
             <i class="fas fa-shopping-cart"></i>
           </button>
           <div class="rating">
-            <input value="5" name="rating" id="star5" type="radio" />
+            <input value="5" id="star5" type="radio" />
             <label for="star5"></label>
-            <input value="4" name="rating" id="star4" type="radio" />
+            <input value="4" id="star4" type="radio" />
             <label for="star4"></label>
-            <input value="3" name="rating" id="star3" type="radio" />
+            <input value="3" id="star3" type="radio" />
             <label for="star3"></label>
-            <input value="2" name="rating" id="star2" type="radio" />
+            <input value="2" id="star2" type="radio" />
             <label for="star2"></label>
-            <input value="1" name="rating" id="star1" type="radio" />
+            <input value="1" id="star1" type="radio" />
             <label for="star1"></label>
           </div>
         </div>
@@ -597,15 +603,15 @@
             <i class="fas fa-shopping-cart"></i>
           </button>
           <div class="rating">
-            <input value="5" name="rating" id="star5" type="radio" />
+            <input value="5" id="star5" type="radio" />
             <label for="star5"></label>
-            <input value="4" name="rating" id="star4" type="radio" />
+            <input value="4" id="star4" type="radio" />
             <label for="star4"></label>
-            <input value="3" name="rating" id="star3" type="radio" />
+            <input value="3" id="star3" type="radio" />
             <label for="star3"></label>
-            <input value="2" name="rating" id="star2" type="radio" />
+            <input value="2" id="star2" type="radio" />
             <label for="star2"></label>
-            <input value="1" name="rating" id="star1" type="radio" />
+            <input value="1" id="star1" type="radio" />
             <label for="star1"></label>
           </div>
         </div>
@@ -623,15 +629,15 @@
             <i class="fas fa-shopping-cart"></i>
           </button>
           <div class="rating">
-            <input value="5" name="rating" id="star5" type="radio" />
+            <input value="5" id="star5" type="radio" />
             <label for="star5"></label>
-            <input value="4" name="rating" id="star4" type="radio" />
+            <input value="4" id="star4" type="radio" />
             <label for="star4"></label>
-            <input value="3" name="rating" id="star3" type="radio" />
+            <input value="3" id="star3" type="radio" />
             <label for="star3"></label>
-            <input value="2" name="rating" id="star2" type="radio" />
+            <input value="2" id="star2" type="radio" />
             <label for="star2"></label>
-            <input value="1" name="rating" id="star1" type="radio" />
+            <input value="1" id="star1" type="radio" />
             <label for="star1"></label>
           </div>
         </div>
@@ -649,15 +655,15 @@
             <i class="fas fa-shopping-cart"></i>
           </button>
           <div class="rating">
-            <input value="5" name="rating" id="star5" type="radio" />
+            <input value="5" id="star5" type="radio" />
             <label for="star5"></label>
-            <input value="4" name="rating" id="star4" type="radio" />
+            <input value="4" id="star4" type="radio" />
             <label for="star4"></label>
-            <input value="3" name="rating" id="star3" type="radio" />
+            <input value="3" id="star3" type="radio" />
             <label for="star3"></label>
-            <input value="2" name="rating" id="star2" type="radio" />
+            <input value="2" id="star2" type="radio" />
             <label for="star2"></label>
-            <input value="1" name="rating" id="star1" type="radio" />
+            <input value="1" id="star1" type="radio" />
             <label for="star1"></label>
           </div>
         </div>
@@ -675,15 +681,15 @@
             <i class="fas fa-shopping-cart"></i>
           </button>
           <div class="rating">
-            <input value="5" name="rating" id="star5" type="radio" />
+            <input value="5" id="star5" type="radio" />
             <label for="star5"></label>
-            <input value="4" name="rating" id="star4" type="radio" />
+            <input value="4" id="star4" type="radio" />
             <label for="star4"></label>
-            <input value="3" name="rating" id="star3" type="radio" />
+            <input value="3" id="star3" type="radio" />
             <label for="star3"></label>
-            <input value="2" name="rating" id="star2" type="radio" />
+            <input value="2" id="star2" type="radio" />
             <label for="star2"></label>
-            <input value="1" name="rating" id="star1" type="radio" />
+            <input value="1" id="star1" type="radio" />
             <label for="star1"></label>
           </div>
         </div>
@@ -704,15 +710,15 @@
             <i class="fas fa-shopping-cart"></i>
           </button>
           <div class="rating">
-            <input value="5" name="rating" id="star5" type="radio" />
+            <input value="5" id="star5" type="radio" />
             <label for="star5"></label>
-            <input value="4" name="rating" id="star4" type="radio" />
+            <input value="4" id="star4" type="radio" />
             <label for="star4"></label>
-            <input value="3" name="rating" id="star3" type="radio" />
+            <input value="3" id="star3" type="radio" />
             <label for="star3"></label>
-            <input value="2" name="rating" id="star2" type="radio" />
+            <input value="2" id="star2" type="radio" />
             <label for="star2"></label>
-            <input value="1" name="rating" id="star1" type="radio" />
+            <input value="1" id="star1" type="radio" />
             <label for="star1"></label>
           </div>
         </div>
@@ -730,15 +736,15 @@
             <i class="fas fa-shopping-cart"></i>
           </button>
           <div class="rating">
-            <input value="5" name="rating" id="star5" type="radio" />
+            <input value="5" id="star5" type="radio" />
             <label for="star5"></label>
-            <input value="4" name="rating" id="star4" type="radio" />
+            <input value="4" id="star4" type="radio" />
             <label for="star4"></label>
-            <input value="3" name="rating" id="star3" type="radio" />
+            <input value="3" id="star3" type="radio" />
             <label for="star3"></label>
-            <input value="2" name="rating" id="star2" type="radio" />
+            <input value="2" id="star2" type="radio" />
             <label for="star2"></label>
-            <input value="1" name="rating" id="star1" type="radio" />
+            <input value="1" id="star1" type="radio" />
             <label for="star1"></label>
           </div>
         </div>
@@ -756,15 +762,15 @@
             <i class="fas fa-shopping-cart"></i>
           </button>
           <div class="rating">
-            <input value="5" name="rating" id="star5" type="radio" />
+            <input value="5" id="star5" type="radio" />
             <label for="star5"></label>
-            <input value="4" name="rating" id="star4" type="radio" />
+            <input value="4" id="star4" type="radio" />
             <label for="star4"></label>
-            <input value="3" name="rating" id="star3" type="radio" />
+            <input value="3" id="star3" type="radio" />
             <label for="star3"></label>
-            <input value="2" name="rating" id="star2" type="radio" />
+            <input value="2" id="star2" type="radio" />
             <label for="star2"></label>
-            <input value="1" name="rating" id="star1" type="radio" />
+            <input value="1" id="star1" type="radio" />
             <label for="star1"></label>
           </div>
         </div>
@@ -782,15 +788,15 @@
             <i class="fas fa-shopping-cart"></i>
           </button>
           <div class="rating">
-            <input value="5" name="rating" id="star5" type="radio" />
+            <input value="5" id="star5" type="radio" />
             <label for="star5"></label>
-            <input value="4" name="rating" id="star4" type="radio" />
+            <input value="4" id="star4" type="radio" />
             <label for="star4"></label>
-            <input value="3" name="rating" id="star3" type="radio" />
+            <input value="3" id="star3" type="radio" />
             <label for="star3"></label>
-            <input value="2" name="rating" id="star2" type="radio" />
+            <input value="2" id="star2" type="radio" />
             <label for="star2"></label>
-            <input value="1" name="rating" id="star1" type="radio" />
+            <input value="1" id="star1" type="radio" />
             <label for="star1"></label>
           </div>
         </div>
@@ -815,6 +821,10 @@
         as your go-to destination for all things books!
       </p>
       <p>Happy reading!</p>
+      <!-- this is for subscribing that use -->
+      <!-- SVG icon representing an inbox/mail, used for the newsletter subscription section -->
+      <!-- The <path> defines the actual shape of the inbox, while <rect> sets an invisible bounding box -->
+      <!-- The <g> elements are used for grouping the shapes and applying transformations -->
       <div style="align-items: center; display: flex; justify-content: center">
         <h3 style="margin-right: 10px">Subscribe to our newsletter</h3>
         <div class="input-wrapper">
@@ -861,30 +871,50 @@
       </div>
       <div style="display: flex; justify-content: start; margin: auto">
         <div style="text-align: start">
-          <p style="background-color: #e5e9b2; color: #333333; border-radius: 10px; padding: 8px; width: 1200px; text-align: center; gap: 20px">
-            <i>"A reader lives a thousand lives before he dies. The man who
-              never reads lives only one."</i>
+          <p
+            style="
+              background-color: #e5e9b2;
+              color: #333333;
+              border-radius: 10px;
+              padding: 8px;
+              width: 1200px;
+              text-align: center;
+              gap: 20px;
+            "
+          >
+            <i
+              >"A reader lives a thousand lives before he dies. The man who
+              never reads lives only one."</i
+            >
             <br />
             <b>— George R.R. Martin</b>
           </p>
-            <p id="team">
-              <br>
-              <b>👤 Meet Our Team</b>
-              <br>
-At [Your Bookstore Name], we are a group of passionate book lovers who believe in the power of stories. Our goal is to make books accessible and enjoyable for everyone. Meet the minds behind our journey:
-<br>
-<b>📚 Abdul Hanan Bhatti - Founder & CEO</b><br>
-A tech enthusiast and entrepreneur with a deep love for books. Abdul Hanan Bhatti believes that books can change lives, and his mission is to create a seamless reading experience for all.
-<br>
+          <p id="team">
+            <br />
+            <b>👤 Meet Our Team</b>
+            <br />
+            At [Your Bookstore Name], we are a group of passionate book lovers
+            who believe in the power of stories. Our goal is to make books
+            accessible and enjoyable for everyone. Meet the minds behind our
+            journey:
+            <br />
+            <b>📚 Abdul Hanan Bhatti - Founder & CEO</b><br />
+            A tech enthusiast and entrepreneur with a deep love for books. Abdul
+            Hanan Bhatti believes that books can change lives, and his mission
+            is to create a seamless reading experience for all.
+            <br />
 
-<b> [Your Team Member's Name] - Content Curator</b> <br>
-[Your team member's role, expertise, and contribution to the bookstore.]
-<br>
-<b>🚀 [Your Team Member's Name] - Marketing & Community Manager</b> <br>
-[How they help grow the bookstore and connect with readers.]
-<br>
-📚 Join us on this journey and let's celebrate the joy of reading together!
-            </p>
+            <b> [Your Team Member's Name] - Content Curator</b> <br />
+            [Your team member's role, expertise, and contribution to the
+            bookstore.]
+            <br />
+            <b>🚀 [Your Team Member's Name] - Marketing & Community Manager</b>
+            <br />
+            [How they help grow the bookstore and connect with readers.]
+            <br />
+            📚 Join us on this journey and let's celebrate the joy of reading
+            together!
+          </p>
         </div>
         <div style="margin: auto" class="socials">
           <div
@@ -926,7 +956,8 @@ A tech enthusiast and entrepreneur with a deep love for books. Abdul Hanan Bhatt
                   >
                     <path
                       d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
-                    ></path></svg>
+                    ></path>
+                  </svg>
                 </span></div
             ></a>
 
@@ -940,7 +971,8 @@ A tech enthusiast and entrepreneur with a deep love for books. Abdul Hanan Bhatt
                   >
                     <path
                       d="M524.531,69.836a1.5,1.5,0,0,0-.764-.7A485.065,485.065,0,0,0,404.081,32.03a1.816,1.816,0,0,0-1.923.91,337.461,337.461,0,0,0-14.9,30.6,447.848,447.848,0,0,0-134.426,0,309.541,309.541,0,0,0-15.135-30.6,1.89,1.89,0,0,0-1.924-.91A483.689,483.689,0,0,0,116.085,69.137a1.712,1.712,0,0,0-.788.676C39.068,183.651,18.186,294.69,28.43,404.354a2.016,2.016,0,0,0,.765,1.375A487.666,487.666,0,0,0,176.02,479.918a1.9,1.9,0,0,0,2.063-.676A348.2,348.2,0,0,0,208.12,430.4a1.86,1.86,0,0,0-1.019-2.588,321.173,321.173,0,0,1-45.868-21.853,1.885,1.885,0,0,1-.185-3.126c3.082-2.309,6.166-4.711,9.109-7.137a1.819,1.819,0,0,1,1.9-.256c96.229,43.917,200.41,43.917,295.5,0a1.812,1.812,0,0,1,1.924.233c2.944,2.426,6.027,4.851,9.132,7.16a1.884,1.884,0,0,1-.162,3.126,301.407,301.407,0,0,1-45.89,21.83,1.875,1.875,0,0,0-1,2.611,391.055,391.055,0,0,0,30.014,48.815,1.864,1.864,0,0,0,2.063.7A486.048,486.048,0,0,0,610.7,405.729a1.882,1.882,0,0,0,.765-1.352C623.729,277.594,590.933,167.465,524.531,69.836ZM222.491,337.58c-28.972,0-52.844-26.587-52.844-59.239S193.056,219.1,222.491,219.1c29.665,0,53.306,26.82,52.843,59.239C275.334,310.993,251.924,337.58,222.491,337.58Zm195.38,0c-28.971,0-52.843-26.587-52.843-59.239S388.437,219.1,417.871,219.1c29.667,0,53.307,26.82,52.844,59.239C470.715,310.993,447.538,337.58,417.871,337.58Z"
-                    ></path></svg>
+                    ></path>
+                  </svg>
                 </span></div
             ></a>
 
